# aind-data-transfer-service

./: .flake8  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  log_config_template.yaml  pyproject.toml
.github/workflows/: publish_dev.yml  publish_main.yml  run_dev_tests.yml  run_main_tests.yml  tag_and_publish.yml
doc_template/source/: conf.py
docs/diagrams/: system_container.puml  system_context.puml
docs/examples/: aind_data_schema_v2.py  basic_upload.py  behavior_videos_compression.csv  behavior_videos_compression.py  custom_codeocean_pipeline_settings.py  custom_metadata_mapper_settings.py  example1.csv  hcr_example.py  remove_source_folders.py  skip_s3_check.py  upload_with_custom_slurm_settings.py  upload_with_notification.py
docs/source/: Contributing.rst  UserGuide.rst  UserGuideV1.rst  UserGuideV2.rst  aind_data_transfer_service.configs.rst  aind_data_transfer_service.hpc.rst  aind_data_transfer_service.models.rst  aind_data_transfer_service.rst  conf.py  index.rst  modules.rst
src/aind_data_transfer_gui/: directory_field.py  forms.py  jobs_manager.py  run.py  server.py
src/aind_data_transfer_gui/templates/: base.html  index.html  index.py  jobs.html  template.py
src/aind_data_transfer_service/: __init__.py  forms.py  log_handler.py  models.py  parsers.py  server.py
src/aind_data_transfer_service/configs/: core.py  csv_handler.py  job_configs.py  job_template_configs.py  job_upload_template.py  platforms_v1.py  server_configs.py
src/aind_data_transfer_service/hpc/: __init__.py  client.py  models.py
src/aind_data_transfer_service/legacy_configs/: __init__.py  csv_handler.py  job_upload_template.py
src/aind_data_transfer_service/models/: __init__.py  core.py  internal.py
src/aind_data_transfer_service/templates/: admin.html  error.html  form.html  index.html  index_v1.html  job_params.html  job_status.html  job_status_table.html  job_tasks_table.html  nav_bar.html  task_logs.html
tests/: test_configs.py  test_core.py  test_csv_handler.py  test_forms.py  test_hpc_client.py  test_hpc_models.py  test_internal.py  test_job_upload_template.py  test_jobs_manager.py  test_log_handler.py  test_models.py  test_proxy.py  test_server.py
tests/resources/: airflow_dag_run_response.json  airflow_dag_runs_response.json  airflow_task_instances_response.json  describe_parameters_response.json  get_parameter_response.json  get_secret_resposne.json  get_secrets_response.json  job_upload_template.xlsx  legacy_sample.csv  legacy_sample2.csv  nested_sample.csv  new_sample.csv  put_parameter_response.json  sample.csv  sample.xlsx  sample_alt_modality_case.csv  sample_empty_rows.csv  sample_empty_rows.xlsx  sample_empty_rows_2.csv  sample_invalid_ext.txt  sample_malformed.csv  sample_malformed.xlsx  sample_malformed_2.csv
tests/test_server/: Dockerfile  db.json
