[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-data-transfer-service"
description = "Service that handles requests to upload data to the cloud"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'boto3',
    'boto3-stubs[ssm]',
    'pydantic>=2.7,<2.9',
    'pydantic-settings>=2.0',
    'aind-data-schema>=1.0.0,<2.0',
    'aind-data-transfer-models==0.16.0',
    'aind-metadata-mapper==0.23.0'
]

[project.optional-dependencies]
dev = [
    'aind-data-transfer-service[server]',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort'
]

docs = [
    'Sphinx',
    'furo'
]

server = [
    'fastapi',
    'httpx',
    'jinja2',
    'starlette',
    'starlette_wtf',
    'uvicorn[standard]',
    'wtforms',
    'requests==2.25.0',
    'openpyxl',
    'python-logging-loki'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_data_transfer_service.__version__"}

[tool.black]
line-length = 79
target_version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_data_transfer_service", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
