[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-data-transfer-service"
description = "Service that handles requests to upload data to the cloud"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aind-data-schema-models>=0.3.2',
    'email-validator',
    'pydantic>=2.0',
    'pydantic-settings>=2.0',
]

[project.optional-dependencies]
dev = [
    'aind-data-transfer-service[server]',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort'
]

docs = [
    'Sphinx',
    'furo'
]

server = [
    'aind-data-schema==2.0.0',
    'boto3',
    'boto3-stubs[ssm]',
    'fastapi>=0.115.13', 
    'httpx',
    'jinja2',
    'starlette>=0.40.0,<0.47.0',
    'starlette_wtf',
    'uvicorn[standard]',
    'wtforms',
    'requests==2.25.0',
    'openpyxl',
    'python-logging-loki',
    'authlib'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_data_transfer_service.__version__"}

[tool.black]
line-length = 79
target_version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_data_transfer_service", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "env"]
fail-under = 100
